tests/fixtures/syntax/valid/multiple_case_blocks.repor
case "first" {
  $ true
  assert { exit 0 }
}

case "second" {
  $ false
  assert {
    exit 1
  }
}
