tests/fixtures/syntax/invalid/write_step_absolute_path.repor
case "write step absolute path is rejected" {
  write "/etc/passwd" ```
    x
    ```
  $ true
  assert {
    exit 0
  }
}
